<resources>
    <string name="app_name">Auth App</string>
    <string name="metamaze">MetaMaze</string>
    <string name="yourawesomeapp">Your Awesome App</string>
    <string name="emailaddress">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="age">Age</string>
    <string name="hint">Hint</string>
    <string name="fullname">Full Name</string>
    <string name="registeruser">Register User</string>
</resources>